--- a/singolo1.css
+++ b/singolo1.css
@@ -1,6 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     margin: 0 auto;
-    padding: 0;
 
     width: 1020px;
 
@@ -8,9 +12,6 @@ body{
 }
 
 header{
-    margin: 0;
-    padding: 0;
-
     width: 100%;
     height: 89px;
     background-color: #2d303a;
@@ -23,13 +24,13 @@ header{
 }
 
 header h1{
-    margin: 0;
-    padding: 0;
-    margin-left: 40px;
+    margin-top:-2px;
+    margin-left: 41px;
     
     color: #ffffff;
     font-family: "Lato";
-    font-size: 18.03448pt;
+    font-size: 18pt;
+    font-weight: 700;
     text-align: justify;
 }
 
@@ -49,14 +50,7 @@ header nav{
     text-align: justify;
 }
 
-nav span{
-    margin: 0;
-    padding: 0;
-}
-
 nav a{
-    margin:0px;
-    padding: 0px;
     padding-left: 13px;
     margin-right: 13px;
 
@@ -69,8 +63,17 @@ nav a:hover{
     color:#f06c64;
 }
 
-.header-bottom{
-    width: 1020px;
-    height: 6px;
-    background-color: #323746;
+.slider{
+    width: 100%;
+    height: 594px;
+
+    background-color: #f06c64;
+    
+    border-top: 6px solid #323746;
+    border-bottom: 6px solid #ea676b;
+}
+
+.chav{
+    width: 16px;
+    height: 27px;
 }
