--- a/singolo1.css
+++ b/singolo1.css
@@ -71,9 +71,91 @@ nav a:hover{
     
     border-top: 6px solid #323746;
     border-bottom: 6px solid #ea676b;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between; 
 }
 
-.chav{
-    width: 16px;
-    height: 27px;
+.chev_left{
+    margin-left: 42px;
+    margin-bottom: 5px;
+}
+.chev_right{
+    margin-right: 40px;
+    margin-bottom: 5px;
+}
+
+.iphones{
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.iphone{
+    width: 240px;
+    height: 483px;
+}
+
+.iphone:nth-child(2){
+    margin-right: 125px;
+    margin-bottom: 7px;
+    transform: rotate(90deg);
+}
+
+.iphone:nth-child(1){
+    margin-left: 1px;
+    margin-bottom: 6px;
+}
+
+.shadow-iphone{
+    width: 240px;
+    height: 483px;
+
+    background-image: url(assets/shadow.png);
+}
+
+.iphone:nth-child(1) .shadow-iphone{
+    transform: scale(1, -1);
+}
+
+.iphone-corpus{
+    width: 215px;
+    height: 483px;
+    margin-top: 1px; 
+
+    background-image: url(assets/corpus.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+.iphone:nth-child(2) .iphone-corpus{
+    transform: scale(1, -1);
+    background-position: top;
+    position: relative;
+    top: -1px;
+
+}
+
+.screen-iphone{
+    position: relative;
+    top: 82px;
+    left: 11px;
+    background-size: contain;
+    width: 194px;
+    height: 339px;
+}
+
+.iphone:nth-child(1) .screen-iphone{
+    background-image: url(assets/screen-v.png);
+    transform: scale(1, -1)
+}
+
+.iphone:nth-child(2) .screen-iphone{
+    background-image: url(assets/screen-h.png);
+    transform: scale(1, -1);
+    top: 58px;
+    left: 11px;
 }
