--- a/singolo1.css
+++ b/singolo1.css
@@ -159,3 +159,106 @@ nav a:hover{
     top: 58px;
     left: 11px;
 }
+
+.services{
+    width: calc(100% - 80px);
+    height: calc(496px - 80px);
+
+    padding: 40px;
+    
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    border-bottom: 6px solid #ffffff;
+ }
+
+h2{
+    position: relative;
+    top: 1px;
+    font-size: 30px;
+    color: #666d89;
+    font-weight: 900;
+}
+
+h4{
+    position: relative;
+    top: -12px;
+
+    letter-spacing: 0.4px;
+    line-height: 30px;
+    font-size: 17px;
+    color: #767e9e;
+    font-weight: 400;
+}
+
+.wrapper{
+    position: relative;
+    top: 1px;
+    display: grid;
+    grid-template: repeat(2, 100px) / repeat(3, 300px);
+    grid-gap: 20px;
+    grid-row-gap: 22px;
+}
+
+.block{
+    display: grid;
+    grid-template: 20px 70px / 70px 220px;
+    grid-gap: 10px;
+}
+
+.block h3{
+    position: relative;
+    top: -3px;
+    color: #666d89;
+    font-weight: 900;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.block h5{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+
+    color: #878da9;
+    line-height: 21px;
+    font-size: 12px;
+    word-wrap: break-word;
+    font-weight: 700;
+    letter-spacing: 0.1px;
+}
+
+.block .image{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3; 
+}
+
+.block:nth-child(1) .image{
+    background-image: url(./assets/pen.png);
+    background-repeat: no-repeat;
+}
+
+.block:nth-child(2) .image{
+    background-image: url(./assets/lightbulb.png);
+    background-repeat: no-repeat;
+}
+
+.block:nth-child(3) .image{
+    background-image: url(./assets/heart.png);
+    background-repeat: no-repeat;
+}
+
+.block:nth-child(4) .image{
+    background-image: url(./assets/phone.png);
+    background-repeat: no-repeat;
+}
+.block:nth-child(5) .image{
+    background-image: url(./assets/bubble.png);
+    background-repeat: no-repeat;
+}
+
+.block:nth-child(6) .image{
+    background-image: url(./assets/Star.png);
+    background-repeat: no-repeat;
+}
