--- a/singolo1.css
+++ b/singolo1.css
@@ -4,21 +4,26 @@
 }
 
 body{
-    margin: 0 auto;
-
-    width: 1020px;
-
     font-family: 'Lato', sans-serif;
+}
+
+.container{
+    width: 100%;
+    max-width: 1020px;
+    margin: 0 auto;
 }
 
 header{
     width: 100%;
     height: 89px;
     background-color: #2d303a;
+}
+
+header .container{
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 
     color: #ffffff;
 }
@@ -71,7 +76,10 @@ nav a:hover{
     
     border-top: 6px solid #323746;
     border-bottom: 6px solid #ea676b;
+}
 
+.slider .container{
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -161,18 +169,22 @@ nav a:hover{
 }
 
 .services{
-    width: calc(100% - 80px);
-    height: calc(496px - 80px);
-
-    padding: 40px;
-    
+    height: 496px;
+    width: 100%;
     background-color: #f2f2f2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
 
     border-bottom: 6px solid #ffffff;
  }
+
+.services .container{
+    height: calc(100% - 80px);
+    width: 940px;
+
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
 
 h2{
     position: relative;
