--- a/singolo1.css
+++ b/singolo1.css
@@ -17,6 +17,8 @@ header{
     width: 100%;
     height: 89px;
     background-color: #2d303a;
+    border-bottom: 6px solid #323746;
+
 }
 
 header .container{
@@ -29,13 +31,12 @@ header .container{
 }
 
 header h1{
-    margin-top:-2px;
-    margin-left: 41px;
-    
+    position: relative;
+    left: 40px;
     color: #ffffff;
     font-family: "Lato";
     font-size: 18pt;
-    font-weight: 700;
+    letter-spacing: 0.1px;
     text-align: justify;
 }
 
@@ -44,10 +45,12 @@ h1 span{
 }
 
 header nav{
-    margin-top: 8px;
+    position: relative;
+    top: 4px;
+    left: -13px;    
+
     display: flex;
     color: #494e62;
-    margin-right: calc(40px - 15px);
     text-decoration: none;
 
     line-height: 20px;
@@ -56,7 +59,7 @@ header nav{
 }
 
 nav a{
-    padding-left: 13px;
+    margin-left: 13px;
     margin-right: 13px;
 
     text-decoration: none;
@@ -74,12 +77,13 @@ nav a:hover{
 
     background-color: #f06c64;
     
-    border-top: 6px solid #323746;
     border-bottom: 6px solid #ea676b;
 }
 
 .slider .container{
     height: 100%;
+    width: 940px;
+    padding: 0 40px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -87,16 +91,18 @@ nav a:hover{
 }
 
 .chev_left{
-    margin-left: 42px;
-    margin-bottom: 5px;
+    position: relative;
+    top: -3px;
+    left: 2px;
 }
 .chev_right{
-    margin-right: 40px;
-    margin-bottom: 5px;
+    position: relative;
+    top: -3px;
+    left: 0px;
 }
 
 .iphones{
-    width: 800px;
+    width: 600px;
     display: flex;
     justify-content: space-between;
 }
@@ -107,14 +113,16 @@ nav a:hover{
 }
 
 .iphone:nth-child(2){
-    margin-right: 125px;
-    margin-bottom: 7px;
     transform: rotate(90deg);
+    position: relative;
+    top: -4px;
+    left: -24px;
 }
 
 .iphone:nth-child(1){
-    margin-left: 1px;
-    margin-bottom: 6px;
+    position: relative;
+    top: -3px;
+    left: -98px;
 }
 
 .shadow-iphone{
@@ -128,10 +136,15 @@ nav a:hover{
     transform: scale(1, -1);
 }
 
+.iphone:nth-child(2) .shadow-iphone{
+    position: relative;
+    top: -2px;
+    left: 1px;
+}
+
 .iphone-corpus{
     width: 215px;
     height: 483px;
-    margin-top: 1px; 
 
     background-image: url(assets/corpus.png);
     background-size: contain;
@@ -143,8 +156,8 @@ nav a:hover{
     transform: scale(1, -1);
     background-position: top;
     position: relative;
-    top: -1px;
-
+    top: 1px;
+    left: -1px;
 }
 
 .screen-iphone{
@@ -188,17 +201,18 @@ nav a:hover{
 
 h2{
     position: relative;
-    top: 1px;
+    top: 3px;
     font-size: 30px;
     color: #666d89;
     font-weight: 900;
+    letter-spacing: -0.2px;
 }
 
 h4{
     position: relative;
     top: -12px;
 
-    letter-spacing: 0.4px;
+    letter-spacing: 0.36px;
     line-height: 30px;
     font-size: 17px;
     color: #767e9e;
@@ -223,7 +237,9 @@ h4{
 .block h3{
     position: relative;
     top: -3px;
+
     color: #666d89;
+    letter-spacing: -0.5px;
     font-weight: 900;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
