--- a/singolo1.css
+++ b/singolo1.css
@@ -47,7 +47,7 @@ h1 span{
 header nav{
     position: relative;
     top: 4px;
-    left: -13px;    
+    left: -26px;    
 
     display: flex;
     color: #494e62;
@@ -65,6 +65,10 @@ nav a{
     text-decoration: none;
     color: #ffffff;
     text-align: justify;
+}
+
+nav a:nth-child(1){
+    color:#f06c64;
 }
 
 nav a:hover{
@@ -90,15 +94,62 @@ nav a:hover{
     justify-content: space-between; 
 }
 
+.for-haver-chev{
+    width: 80px;
+    height: 200px;
+}
+
+.for-haver-chev:nth-child(1){
+    position: relative;
+    left: -40px;
+}
+
+.for-haver-chev:nth-child(3){
+    position: relative;
+    left: 35px;
+}
+
 .chev_left{
     position: relative;
-    top: -3px;
-    left: 2px;
+    top: 84px;
+    left: 42px;
 }
+
 .chev_right{
     position: relative;
-    top: -3px;
-    left: 0px;
+    top: 84px;
+    left: 29px;
+}
+
+.for-haver-chev:hover .chev_left{
+    animation: left-chev-animation 1s infinite linear;
+}
+.for-haver-chev:hover .chev_right{
+    animation: right-chev-animation 1s infinite linear;
+}
+
+@keyframes left-chev-animation {
+    from {
+        left: 42px;
+    }
+    50% {
+        left: 32px;
+    }
+    to {
+        left: 42px;
+    }
+}
+
+@keyframes right-chev-animation {
+    from {
+        left: 29px;
+    }
+    50% {
+        left: 39px;
+    }
+    to {
+        left: 29px;
+    }
 }
 
 .iphones{
