--- a/singolo2.css
+++ b/singolo2.css
@@ -1,24 +1,92 @@
-*{
+* {
     margin: 0;
-    padding: 0; 
+    padding: 0;
 }
 
-body{
+body {
     font-family: 'Lato', sans-serif;
     width: 100%;
+    color: #666d89;
 }
 
-.container{
+.container {
     margin: 0 auto;
     width: 1020px;
-    padding: 40px;
+    height: 100%;
 }
 
-.portfolio{
+.portfolio {
     width: 100%;
+    height: calc(864px - 80px);
+    background-color: #2d303a;
 }
 
-.img-for-portfolio{
+.portfolio .container{
+    display: flex;
+    flex-direction: column;
+    padding-top:  10px;
+    padding-bottom: 15px;
+}
+
+.portfolio h2 {
+    position: relative;
+    top: 11px;
+
+    font-size: 30px;
+    letter-spacing: -0.1px;
+    font-weight: 800;
+}
+
+.portfolio p{
+    position: relative;
+    top: 33px;
+
+    font-size: 18px;
+    letter-spacing: -0.23px;     
+}
+
+.portfolio ul{
+    position: relative;
+    top: 48px;
+    display: flex;
+    flex-direction: row;
+}
+
+.portfolio li{
+    margin-right: 10px;
+    padding: 6px;
+    height: 8px;
+
+    border: 1px solid #666d89;
+    border-radius: 4px;
+
+    vertical-align: middle;
+
+    line-height: 8px;
+    list-style-type: none;
+    color: #666d89;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.portfolio li:hover{
+    color: #c5c5c5;
+    border-color: #c5c5c5;
+}
+
+.images {
+    position: relative;
+    top: 66px;
+    display: grid;
+    grid-template: repeat(3, 187px) / repeat(4, 220px);
+    grid-gap: 20px;
+}
+
+.img-for-portfolio {
     width: 220px;
     height: 187px;
+}
+
+.portfolio .img-for-portfolio:nth-child(n+13){
+    display: none;
 }
