--- a/singolo2.css
+++ b/singolo2.css
@@ -24,10 +24,11 @@ body {
 }
 
 .portfolio .container{
+    width: calc(100% - 80px);
+
     display: flex;
     flex-direction: column;
     position: relative;
-    left: 40px;
     padding-top:  50px;
     padding-bottom: 55px;
 }
@@ -52,6 +53,7 @@ p{
 .portfolio ul{
     position: relative;
     top: 48px;
+
     display: flex;
     flex-direction: row;
 }
@@ -97,17 +99,61 @@ p{
 
 .about-us{
     background-color: #f2f2f2;
-    height: calc(734px- 80px);
+    height: calc(728px);
+    border-bottom: #ffffff solid 6px;
 }
 
 .about-us .container{
+    height: calc(100% - 80px);
+    width: calc(100% - 60px);
     padding: 40px;
-    direction: flex;
-    flex-direction: column; 
+    padding-right: 20px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .staff{
     display: grid;
     grid-gap: 20px;
     grid-template: 443px / repeat(3, 300px);
+}
+
+.staff > div{
+    display: grid;
+    grid-template: 300px 20px 46px 32px/ 300px;
+    grid-gap: 15px;
+}
+
+.about-us h2{
+    position: relative;
+    top: 19px;
+}
+
+.about-us p{
+    position: relative;
+    top: -18px;
+    line-height: 30px;
+    letter-spacing: -0.05px;
+}
+
+.about-us .staff{
+    position: relative;
+    top: -27px;
+}
+
+.staff > div > h3{
+    letter-spacing: -0.4px;
+}
+
+.staff > div > p{
+    position: relative;
+    top: -4px;
+    font-size: 12px;
+    letter-spacing: -0.1px;
+    line-height: 20px;
+}
+
+.staff > div  img{
+    padding-right: 5px;
 }
