--- a/singolo3.css
+++ b/singolo3.css
@@ -121,6 +121,10 @@ button{
     color: #f0d8d9;
 }
 
+button:hover{
+    cursor: pointer;
+}
+
 .get-a-quote aside{
     display: flex;
     flex-direction: column;
