--- a/singolo1.css
+++ b/singolo1.css
@@ -65,6 +65,9 @@ nav a{
     text-decoration: none;
     color: #ffffff;
     text-align: justify;
+
+    transition: all 0.5s ease;
+
 }
 
 nav a:nth-child(1){
