--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,21 @@ header .container{
     height: 100%;
 }
 
+.anchors{
+    position: relative;
+    top:-95px;
+    height: 0px;
+    visibility: hidden;
+}
+
 header{
+    position: sticky;
+    top:0;
     width: 100%;
     height: 89px;
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
-
+    z-index: 10;
 }
 
 header .container{
@@ -78,10 +87,6 @@ nav a{
 
     transition: all 0.5s ease;
 
-}
-
-nav a:nth-child(1){
-    color:#f06c64;
 }
 
 nav a:hover{
@@ -448,8 +453,10 @@ p{
 }
 
 .img-for-portfolio {
+    position: relative;
     width: 220px;
     height: 187px;
+    border: 0px solid #f06c64;
 }
 
 .portfolio .img-for-portfolio:nth-child(n+13){
