--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,14 @@
     font-family: 'Lato', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Lato', sans-serif;
     color: #666d89;
+    overflow-x:hidden; 
 }
 
 header .container{
@@ -24,10 +29,7 @@ header .container{
 }
 
 .anchors{
-    position: relative;
-    top:-95px;
-    height: 0px;
-    visibility: hidden;
+   scroll-margin-top: 95px;
 }
 
 header{
@@ -42,6 +44,7 @@ header{
 
 header .container{
     height: 100%;
+    padding: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -85,12 +88,19 @@ nav a{
     color: #ffffff;
     text-align: justify;
 
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
 
 }
 
 nav a:hover{
     color:#f06c64;
+}
+
+.sliders{
+    position: relative;
+    /* left: -100%; */
+    width: 100%;
+    display: flex;
 }
 
 .slider{
@@ -100,6 +110,9 @@ nav a:hover{
     background-color: #f06c64;
     
     border-bottom: 6px solid #ea676b;
+
+    transition-property: background-color, border-bottom;
+    transition-duration: 3s;
 }
 
 .slider .container{
@@ -110,6 +123,13 @@ nav a:hover{
     flex-direction: row;
     align-items: center;
     justify-content: space-between; 
+   
+}
+
+
+.slider-2-background{
+    background-color: #648bf0;
+    border-bottom: 6px solid #74b9ff;
 }
 
 .for-haver-chev{
@@ -136,7 +156,7 @@ nav a:hover{
 .chev_right{
     position: relative;
     top: 84px;
-    left: 29px;
+    left: 22px;
 }
 
 .for-haver-chev:hover .chev_left{
@@ -160,20 +180,21 @@ nav a:hover{
 
 @keyframes right-chev-animation {
     from {
-        left: 29px;
+        left: 22px;
     }
     50% {
-        left: 39px;
+        left: 32px;
     }
     to {
-        left: 29px;
+        left: 22px;
     }
 }
 
 .iphones{
-    width: 600px;
+    width: 880px;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .iphone{
@@ -184,14 +205,18 @@ nav a:hover{
 .iphone:nth-child(2){
     transform: rotate(90deg);
     position: relative;
-    top: -4px;
-    left: -24px;
+    top: 12px;
+    left: 193px;
 }
 
 .iphone:nth-child(1){
     position: relative;
-    top: -3px;
-    left: -98px;
+    top: 12px;
+}
+
+img.slider-2{
+    position: relative;
+    left: 540px;
 }
 
 .shadow-iphone{
@@ -433,10 +458,6 @@ p{
     transition: all 0.5s ease;
 }
 
-.portfolio li:nth-child(1){
-    color: #c5c5c5;
-    border-color: #c5c5c5 
-}
 
 .portfolio li:hover{
     color: #c5c5c5;
@@ -779,3 +800,61 @@ footer img:last-child{
 footer img:hover{
     cursor: pointer;
 }   
+
+/*----- STYLES FOR JS -----------*/
+
+.to-hidden{
+    display: none;
+}
+
+.start-slider-1{
+    /* left: -100%; */
+}
+
+.start-slider-2{
+    flex-direction: row-reverse;
+}
+
+.active_nav{
+    color:#f06c64;
+}
+
+.portfolio li.active_tag{
+    color: #c5c5c5;
+    border-color: #c5c5c5;
+}
+
+.active_image{
+    position: relative;
+    top: -5px;
+    left: -5px;
+    
+    border-width: 5px;
+}
+
+@media (max-width: 1019px){
+    
+    .container{
+        max-width: 768px;
+    }
+
+    .services{
+        height: 571px;
+    }
+
+    .services .wrapper{
+        grid-template: repeat(3, 104px) / repeat(2, 300px);
+    }
+
+    .portfolio{
+        height: 1102px;
+    }
+
+    .images {
+        grid-template: repeat(4, 187px) / repeat(3, 220px);
+    }
+
+    .staff{
+        grid-template: 443px / repeat(3, 300px);
+    }
+}
