feat: add slider animation in tablet version

--- a/styles.css
+++ b/styles.css
@@ -22,34 +22,104 @@ header .container{
 
 .burger-button {
     display: none;
-    position: relative;
+
+    position: fixed;
+    top: 26px;
+    left: 20px;
+    z-index: 22;
+
+    width: 25px;
+    height: 20px;
+    
+    flex-direction: column;
+    justify-content: space-between;
+
+
+    cursor: pointer;
+    transition: transform 0.3s, top 0.3s;
+}
+
+.burger-button div {
+    background-color: #fff;
+    height: 2px;
+}
+
+
+.burger-button-open {
+    transform: rotate(-90deg);
+}
+
+
+.menu-bg{
+    position: fixed;
+    top: 0;
+    left: -100vw;
+    height: 100vh;
+    width: 100vw;
+    z-index: 11;
+    transition: left 0.3s, top 0.3s;    
+}
+
+.menu-bg-open{
+    left:0;
+}
+
+.menu-bg .content{
+    background-color: #2D303A;
+    width: 210px;
+    height: 100vh; 
+    padding: 35px 30px; 
+    display: flex;
+    flex-direction: column;
+    box-shadow: 10px 10px 94px 1px rgba(45,48,58,1);
+}
+
+.menu-bg .content a{
+   margin: 0px;
+}
+
+.menu-bg .content .burger-button{
+    position: absolute;
+    top: 45px;
     left: 30px;
-    width: 25px;
-    height: 3.4px;
-    background-color: #ffffff;
-    border-radius: 5px;
+    transform: rotate(90deg)
 }
 
-.burger-button::before {
-    position: absolute;
-    content: "";
-    display: block;
-    width: 25px;
-    height: 3.4px;
-    background-color: #ffffff;
-    top: 9.4px;
-    border-radius: 5px;
+.menu-bg .content > span{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.burger-button::after {
+.menu-bg .content p{
     position: absolute;
-    content: "";
-    display: block;
-    width: 25px;
-    height: 3.4px;
-    background-color: #ffffff;
-    top: -9.4px;
-    border-radius: 5px;
+    top: 25px;
+    left: 70px;
+    color: #ffffff;
+    font-family: "Lato";
+    font-size: 20px;
+    letter-spacing: 0.1px;
+    text-align: justify;
+}
+
+.menu-bg .content span{
+    color:#f06c64;   
+}
+
+.menu-bg .content #header-n{
+    position: absolute;
+    left: 70px;
+    top: 230px;
+    height: 30vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+
+.menu-bg a{
+    font-size: 24px;   
 }
 
 .container {
@@ -223,7 +293,7 @@ nav a:hover{
 }
 
 .iphones{
-    width: 880px;
+    width: 915px;
     display: flex;
     justify-content: space-between;
     overflow: hidden;
@@ -238,7 +308,7 @@ nav a:hover{
     transform: rotate(90deg);
     position: relative;
     top: 12px;
-    left: 193px;
+    left: 195px;
 }
 
 .iphone:nth-child(1){
@@ -248,7 +318,7 @@ nav a:hover{
 
 img.slider-2{
     position: relative;
-    left: 540px;
+    left: 465px;
 }
 
 .shadow-iphone{
@@ -905,36 +975,90 @@ footer img:hover{
 @media (max-width: 1019px){
     
     .slider .container{
-        width: calc(100% - 80px);
+        width: calc(100vw);
+        padding: 0;
     }
 
     .iphone{
-        width: 100%;
-    }
-
-    .iphones{
-        width: calc(100% - 60px);
-    }
-
-    .iphone{
+        width: 180px;
+        height: 364px;
     }
     
-    .shadow-iphone{
+    .iphones{
+        width: 600px;
+        align-items: center;
+    }
 
+    .shadow-iphone{
+        width: 180px;
+        height: 364px;
+        top: 0;
+        left: 0;
+        background-size: cover;
     }
 
     .iphone-corpus{
-        
+        position: absolute;
+        width: 162px;
+        height: 344px;
+        top: 19px;
+        left: -1px;
+    }
 
+    .for-haver-chev:nth-child(1) {
+        left: -10px;
+    }
+
+    .for-haver-chev:nth-child(3) {
+        position: relative;
+        left: 10px;
     }
     
+    .iphone:nth-child(1) {
+        width: 180px;
+        height: 364px;
+        top: 0;
+        left: 0;
+    }
+
+    .iphone:nth-child(2) {
+        width: 180px;
+        height: 364px;
+        top: 0px;
+        left: 146px;
+    }
+
+    .iphone:nth-child(2) .iphone-corpus {
+        transform: scale(1, -1);
+        background-position: top;
+        position: relative;
+        top: 18px;
+        left: -1px;
+    }
+
+    .iphone:nth-child(2) .screen-iphone{
+        background-image: url(assets/screen-h.png);
+        transform: scale(1, -1);
+        top: 35px;
+        left: 11px;
+    }
+
+    img.slider-2 {
+        left: 300px;
+    }
+
     .screen-iphone {
+        width: 144px;
+        height: 261px;
+        top: 35px;
+        left: 9px;
         background-repeat: no-repeat;
+        background-size: contain;
     }
 
     .container{
         /* max-width: 688px; */
-        width: calc(100% - 80px);
+        width: calc(100% - 80px)
     }
 
     .services{
@@ -991,12 +1115,17 @@ footer img:hover{
 
 @media (max-width: 767px){
 
+    .anchors{
+        scroll-margin-top: 71px;
+    }
+
     .burger-button{
-        display: inline;
+        display: flex;
     }
     
     header{
         height: 71px;
+        border-bottom: none;
     }
 
     .services .block{
@@ -1024,7 +1153,7 @@ footer img:hover{
     }
 
     .services .container {
-        height: calc(100% - 60px);
+        width: calc(100% - 60px);
         padding: 40px 30px;
         margin: 0;
     }
@@ -1043,8 +1172,12 @@ footer img:hover{
     }
 
     .images {
-        grid-template: repeat(6, 1fr)/ repeat(2, 1fr);
+        grid-template: repeat(4, 1fr)/ repeat(2, 1fr);
         grid-gap: 13px;
+    }
+
+    .portfolio .img-for-portfolio:nth-child(n+9){
+        display: none;
     }
 
     .staff{
@@ -1096,5 +1229,13 @@ footer img:hover{
 }
 
 @media (max-width: 374px){
+    .services .block{
+        height: 100%;
+        width: 100%;
+        grid-template: 1fr 3fr/ 1fr 3fr;
+    }
 
+    .portfolio li{
+        margin-right: 1px;
+    }
 }
